--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ button[type="submit"]:hover {
 /* ---------------------------------------------------- */
 
 .asistencia-container {
+    height: 300px;
     background: #ffffff;
     padding: 25px;
     border-radius: 10px;
