update de filtros

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ button[type="submit"]:hover {
 .btn-filtros {
     padding: 12px 20px;
     font-size: 16px;
-    background: #28a745;
+    background: #0b0b63;
     color: white;
     border: none;
     border-radius: 8px;
