--- a/css/style.css
+++ b/css/style.css
@@ -1146,6 +1146,7 @@ button[type="submit"]:hover {
     margin-bottom: 20px;
     color: #0b0b63;
     font-size: 24px;
+    text-align: center;
 }
 
 .btn-cerrar-modal {
